<resources>
    <string name="app_name">CliHis</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="clihis">CLIHIS</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="prescription">prescription</string>
    <string name="please_enter_doctor_name">please enter doctor name</string>
    <string name="doctor">Doctor :</string>
    <string name="enter_prescription">enter prescription</string>
</resources>