<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".StartActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clihis"
        android:textSize="25sp"
        android:textStyle="bold"
        />
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:id="@+id/login"
    android:text="@string/login"
    android:layout_marginTop="100dp"

    />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register"

        />
</LinearLayout>