<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".PrescriptionActivity"  >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/doctor"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/et_doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/please_enter_doctor_name"

            />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Client :"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_doctor_name"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Diagnosis :"
        android:textSize="15dp"
        android:textStyle="bold"
         />

    <AutoCompleteTextView
        android:id="@+id/et_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"


        android:ems="10"

        android:hint="Please enter diagnosis"
        android:inputType="textPersonName"
        />

    </LinearLayout>

        <MultiAutoCompleteTextView
            android:id="@+id/et_prescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:completionThreshold="1"


            android:ems="10"
            android:gravity="start"
            android:hint="@string/enter_prescription"
            />





</LinearLayout>